styles.css
:root {
    --main-color: rgb(177, 235, 150);
    --root-bg: rgb(27, 26, 26);
    --main-bg: rgb(56, 57, 56);
    --grey-color: rgb(209, 209, 209);
    --red-color: rgba(231, 75, 75, 0.685);
}

*,
*::before,
*::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    font-size: 25px;
    font-family: 'Arima Madurai', cursive;
    color: var(--main-color);
    background-color: var(--root-bg);
}

html, body, .container {
    height: 100%;
    width: 100%;
}

.container {
    display: grid;
    grid-template-rows: 8rem 1fr auto;
    grid-template-columns: 4fr minmax(225px, 1fr);
    font-size: 1rem;
    padding: 0 .5rem;
}

.header {
    align-self: center;
}

.body {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
}

.side-bar {
    grid-column: 2 / 3;
    grid-row: 1 / 3;
    padding: 1rem;
    position: sticky;
    align-self: start;
    top: 0;
    right: 0;
}

.title,
.book-catalog {
    display: flex;
    justify-content: center;
    align-items: center;
}

.title {
    font-size: 2.7rem;
    gap: 1.5rem;
    padding: 2rem;
}

.book-catalog {
    flex-direction: column;
}

.catalog-item {
    align-self: flex-start;
}

.title>img {
    width: 5.5rem;
    -webkit-filter: invert(96%) sepia(12%) saturate(1276%) hue-rotate(40deg) brightness(97%) contrast(90%);
    filter: invert(96%) sepia(12%) saturate(1276%) hue-rotate(40deg) brightness(97%) contrast(90%);
}

.book-library {
    border:solid 10px var(--main-bg);
    border-radius: 15px;
    grid-row: 1 / 3;
    display: grid;
    gap: 15px;
    grid-template-columns: repeat(auto-fill, minmax(15rem,1fr));
    padding: .5rem;
    min-height: 10.5rem;
}

.book {
    display: grid;
    gap: 10px;
    height: 22rem;
    border: solid 10px;
    border-radius: 15px;
    padding: 10px;
    justify-items: center;
    text-align: center;
    word-break: break-word;
}

.book-info {
    align-self: center;
}

.book-title {
    font-weight: bold;
    font-size: 1.5rem;
}

.btn-container {
    align-self: end;
}

form[name="book-form"] {
    box-sizing: border-box;
    margin: 0 auto;
    padding: 10px;
    display: grid;
    gap: 15px;
    justify-items: center;
}

input[type='text'] {
    padding: 10px;
    margin: 5px;
    border: none;
    border-bottom: solid 5px var(--main-color);
    font-size: .7rem;
    background-color: var(--main-bg);
    color: var(--main-color);
}

input[name="status"] {
    appearance: none;
    position: relative;
    width: 1em;
    height: 1em;
    border: 1px solid var(--main-color);
    background-color: var(--main-bg);
    border-radius: 50%;
}

input[name="status"]:checked {
    background-color: var(--main-color);
}

button[type='submit'] {
    font-family: inherit;
    font-size: 1rem;
    font-weight: bold;
    width: 7rem;
    height: 2.5rem;
    background-color: var(--main-bg);
    color: var(--main-color);
    border: solid 5px var(--main-color);
    border-radius: 15px;
}

button[type='submit']:hover {
    background-color: var(--main-color);
    color: var(--main-bg);
    border-color: var(--main-bg);
}

button[type='submit']:active {
    filter: brightness(50%);
}

button.book-read,
button.book-unread,
button.delete-btn {
    font-family: inherit;
    font-size: .8rem;
    font-weight: bold;
    width: 6rem;
    height: 1.5rem;
    background-color: var(--main-bg);
    border-radius: 15px;
    display: block;
}

button.book-read {
    color: var(--main-color);
    border: solid 3px var(--main-color);
}

button.book-unread {
    color: var(--grey-color);
    border: solid 3px var(--grey-color);
}

button.delete-btn {
    color: var(--red-color);
    border: solid 3px var(--red-color);
    margin-top: .7rem;
    margin-bottom: 5px;
}

button.book-read:hover {
    background-color: var(--main-color);
    color: var(--main-bg);
    border: solid 3px var(--main-bg);
}

button.book-unread:hover {
    background-color: var(--grey-color);
    color: var(--main-bg);
    border: solid 3px var(--main-bg);
}

button.delete-btn:hover {
    background-color: var(--red-color);
    color: var(--main-bg);
    border: solid 3px var(--main-bg);
}

button.book-read:active,
button.book-unread:active,
button.delete-btn:active {
    filter: brightness(50%);
}

.footer {
    justify-self: center;
    grid-row: 3 / 4;
    grid-column: 1 / -1;
    font-weight: bold;
    padding: 5rem 0 1rem;
    display: flex;
    gap: .5rem;
}

.footer>img {
    width: 1.3rem;
    -webkit-filter: invert(96%) sepia(12%) saturate(1276%) hue-rotate(40deg) brightness(97%) contrast(90%);
    filter: invert(96%) sepia(12%) saturate(1276%) hue-rotate(40deg) brightness(97%) contrast(90%);
}

@media (max-width: 1250px) {
    html {
        font-size: 22px;
    }
    .side-bar {
        grid-row: 2 / 3;
    }
    .header {
        grid-column: 1 / -1;
    }
}

@media (max-width: 1065px) {
    html {
        font-size: 18px;
    }
    .side-bar {
        grid-row: 2 / 3;
    }
    .header {
        grid-column: 1 / -1;
    }
}

@media (max-width: 415px) {
    html {
        font-size: 14px;
    }
    .side-bar {
        grid-row: 2 / 3;
    }
    .header {
        grid-column: 1 / -1;
    }
}

